# DeepRefine-Skill

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SKILL.md  gemini-extension.json  pyproject.toml
commands/: deeprefine.toml
commands/deeprefine/: apply.toml  review.toml
deeprefine_skill/: SKILL.md  SKILL_COPILOT.md  SKILL_OPENCODE.md  __init__.py  action_review.py  adapter_graphify.py  agent_graph.py  agent_loop.py  agent_prompts.py  cli.py  history.py  installers.py  obsidian_refresh.py  paths.py  refine_runner.py  wiki_importer.py  wiki_refresh.py  wiki_update.py
deeprefine_skill/claude_skill/: SKILL.md
deeprefine_skill/claude_skill/references/: deeprefine-workflow.md  reafiner-workflow.md  trace-and-commands.md
deeprefine_skill/codex_skill/: SKILL.md
deeprefine_skill/codex_skill/references/: deeprefine-workflow.md  llm-prompts.md
deeprefine_skill/commands/opencode/: deeprefine-apply.md  deeprefine-review.md  deeprefine.md
deeprefine_skill/gemini_extension/: GEMINI.md
deeprefine_skill/gemini_extension/commands/deeprefine/: apply.toml
docs/: PROJECT-PLAN.md  codex.md  copilot-cli.md  feat-verification-fixtures.md  gemini-cli.md  phase-b-report.md  verification-data.md
docs/tmp/: Adding_Agent_Skills_for_CopilotCLI.md  CHANGELOG.md  PROJECT-PLAN.md  proposal.tex  reading-notes-reafiner.md
fixtures/: refinement-ambiguous.txt  refinement-good.txt  refinement-invalid.txt  synth-minimal.json  trace-invalid-order.json  trace-valid-early-exit.json  trace-valid.json
scripts/: deeprefine.py  validate_graph_schema.py
skills/deeprefine/: SKILL.md
tests/: test_opencode_integration.py  test_wiki_refresh.py
