[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprefine-cli"
version = "0.1.6"
description = "CLI and Cursor skill to refine graphify knowledge graphs with DeepRefine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "HKUST-KnowComp"},
]
keywords = ["deeprefine", "graphify", "knowledge-graph", "rag", "cursor", "agent-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/HKUST-KnowComp/DeepRefine-Skill"
Documentation = "https://github.com/HKUST-KnowComp/DeepRefine-Skill#readme"
Repository = "https://github.com/HKUST-KnowComp/DeepRefine-Skill"
Issues = "https://github.com/HKUST-KnowComp/DeepRefine-Skill/issues"

[project.scripts]
deeprefine = "deeprefine_skill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deeprefine_skill*"]

[tool.setuptools.package-data]
deeprefine_skill = ["SKILL.md"]
